Made some comments and otherwise cleaned up code (unneeded lines, extra spaces, etc. I also tested some things to fix my NaN problem, more to come on that

--- a/index.css
+++ b/index.css
@@ -1,9 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 * {
-    /* border: 2px red solid; */
-    background-color: #2e91ca;
-    
+    background-color: #2e91ca;    
 }
 
 /* elements */
@@ -16,8 +12,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: Barlow, Ubuntu, sans-serif;
-    font-weight: 500;
+    font-family:  Ubuntu, sans-serif;
+    font-weight: 400;
     color: #FCEFF9;
     font-size: 4em;
 }
@@ -34,12 +30,16 @@ a {
     margin: 3px;
     border-radius: 5px;
     border: 0;
-    font-size: 40%;
+    font-size: 50%;
     box-shadow: 4px 4px rgb(75, 75, 75);
 }
 
 .button:hover {
     filter: brightness(1.4);
+}
+
+.button:active {
+    filter: brightness(1.8);
 }
 
 /* IDs */
@@ -108,12 +108,6 @@ a {
     background-color: orangered;
 }
 
-#zeroButton {
-}
-
-#dotButton {
-}
-
 #right {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 2fr;
@@ -134,10 +128,16 @@ a {
 
 #footer {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 15%;
     width: 100%;
     margin: 0%;
     font-size: 0.5em;
+}
+
+#foot2 {
+    font-size: 0.8em;
+    margin-top: 0.5%;
 }
